OBJ/MTL import: opaque blend mode when d<1 #97743

Closed
opened 2022-04-30 18:34:20 +02:00 by Scurest · 4 comments
Contributor

System Information
Operating system: Linux
Graphics card:

Blender Version
Broken: blender-3.2.0-alpha+master.bf80dc2bd4ac
Worked:

Short description of error
The OBJ importer (either one) sets the material blend mode for Eevee to "Alpha Blend" if a there's an dissolve texture (map_d), but not if there's a dissolve factor (d).

Exact steps for others to reproduce the error
Import this file. There are two cubes with the same dissolve, one from a constant map_d, and one from a factor d.
DissolveCubes.zip
Here's how they look in Eevee.
DissolveCubesExpected.png

**System Information** Operating system: Linux Graphics card: **Blender Version** Broken: blender-3.2.0-alpha+master.bf80dc2bd4ac Worked: **Short description of error** The OBJ importer (either one) sets the material blend mode for Eevee to "Alpha Blend" if a there's an dissolve texture (map_d), but not if there's a dissolve factor (d). **Exact steps for others to reproduce the error** Import this file. There are two cubes with the same dissolve, one from a constant map_d, and one from a factor d. [DissolveCubes.zip](https://archive.blender.org/developer/F13041924/DissolveCubes.zip) Here's how they look in Eevee. ![DissolveCubesExpected.png](https://archive.blender.org/developer/F13041919/DissolveCubesExpected.png)
Author
Contributor

Added subscriber: @scurest

Added subscriber: @scurest
Aras Pranckevicius self-assigned this 2022-05-01 18:38:46 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by bddcb89cda

This issue was referenced by bddcb89cdaa6d9b36b3e42547a95bff792d37610

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:40:49 +01:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-02-10 12:49:29 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97743
No description provided.